fix immutability in of() factories. Add immutability test to structural JSON